Add create function

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -13,6 +13,9 @@
                     </div>
                 </div>
             </form>
+            <form action="/restaurants/new" class="mt-2 d-flex justify-content-end">
+                <button class="btn btn-major" type="submit" id="search-button">Create</button>
+            </form>
         </div>
     </div>
 </div>
