--- a/views/new.handlebars
+++ b/views/new.handlebars
@@ -1,5 +1,5 @@
 <div class="container">
-    <h3 class="d-flex justify-content-center">新增餐廳資訊</h3>
+    <h1 class="mb-1 restaurant-new-title">新增餐廳資訊</h1>
     <form action="/restaurants" method="POST">
         <div class="mb-3">
             <label for="name">名稱</label>
