--- a/views/show.handlebars
+++ b/views/show.handlebars
@@ -13,6 +13,22 @@
 
             <p class="mb-1">
                 <span class="text-secondary">
+                    <i class="fas fa-tag"></i>
+                    英文名稱：
+                </span>
+                {{restaurant.name_en}}
+            </p>
+
+            <p class="mb-1">
+                <span class="text-secondary">
+                    <i class="fas fa-star"></i>
+                    評分
+                </span>
+                {{restaurant.rating}}
+            </p>
+
+            <p class="mb-1">
+                <span class="text-secondary">
                     <i class="fas fa-map-marker-alt pr-2"></i>
                     地址：
                 </span>
