--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -1,5 +1,5 @@
 <div class="container">
-    <h3 class="d-flex justify-content-center">修改餐廳資訊</h3>
+    <h1 class="mb-1 restaurant-edit-title">修改餐廳資訊</h1>
     <form action="/restaurants/{{restaurant._id}}/edit" method="POST">
         <div class="mb-3">
             <label for="name">名稱</label>
