--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -1,6 +1,6 @@
 <div class="container">
     <h1 class="mb-1 restaurant-edit-title">修改餐廳資訊</h1>
-    <form action="/restaurants/{{restaurant._id}}/edit" method="POST">
+    <form action="/restaurants/{{restaurant._id}}/?_method=PUT" method="POST">
         <div class="mb-3">
             <label for="name">名稱</label>
             <input type="text" id="name" name="name" value="{{restaurant.name}}" required>
