--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -27,12 +27,18 @@
                         width="30" height="30" class="d-inline-block align-top" alt="我的餐廳清單">
                     我的餐廳清單
                 </a>
+                {{#if isAuthenticated}}
+                <a class="btn btn-outline-secondary" href="/users/logout">Logout</a>
+                {{else}}
+                <a class="btn btn-outline-secondary" href="/users/login">Login</a>
+                {{/if}}
             </div>
         </nav>
 
         <div class="banner"></div>
     </header>
     {{{body}}}
+    <div class="mb-5"></div>
     {{!-- bootstrap --}}
     <script src="/javascripts/popper.js"></script>
     <script src="/javascripts/bootstrap.js"></script>
